# SEP-CTs

./: .gitignore  README.md
prototypes/ARGH/: thermalprototype
prototypes/ARGH/src/: Quadtree.cpp  Quadtree.h  QuadtreeObject.cpp  QuadtreeObject.h  main.cpp  recttree.h
prototypes/gazeboplugins/: CMakeLists.txt  blah.world  camera_feed.cc  camera_feed.hh  camera_push.cc  hello.world  hello_world.cc  model_push.cc  model_push.world  objPos.txt~  objPosY.txt  objPosZ.txt  object_pos.cc  output.avi
prototypes/ros_tld_demo/: README.md  test.avi
prototypes/ros_tld_demo/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
prototypes/ros_tld_demo/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
prototypes/ros_tld_demo/devel/include/rostld/: Image.h
prototypes/ros_tld_demo/devel/share/common-lisp/ros/rostld/msg/: Image.lisp  _package.lisp  _package_Image.lisp  rostld-msg.asd
prototypes/ros_tld_demo/devel/share/rostld/cmake/: rostld-msg-extras.cmake  rostld-msg-paths.cmake  rostldConfig.cmake
prototypes/ros_tld_demo/src/rostld/: CMakeLists.txt  CMakeLists_demo.txt  package.xml
prototypes/ros_tld_demo/src/rostld/include/: TLD.h
prototypes/ros_tld_demo/src/rostld/launch/: test.launch  test.perspective
prototypes/ros_tld_demo/src/rostld/msg/: Image.msg
prototypes/ros_tld_demo/src/rostld/src/: camera_broadcaster.cpp  tldtracker.cpp  tracker.h
prototypes/thermalprototype/: CMakeLists.txt
